--- a/alunos/templates/alunos/aluno_form.html
+++ b/alunos/templates/alunos/aluno_form.html
@@ -21,4 +21,13 @@
         </form>
     </div>
 </div>
+{% endblock %}
+
+{% block extra_js %}
+<script>
+    $(document).ready(function(){
+        $('#id_data_nascimento').mask('00/00/0000');
+        $('#id_telefone').mask('(00) 0 0000-0000');
+    });
+</script>
 {% endblock %} 
