--- a/alunos/templates/alunos/base.html
+++ b/alunos/templates/alunos/base.html
@@ -250,6 +250,11 @@
                             <i class="fas fa-money-bill-wave"></i> Mensalidades
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'relatorio-mensal' %}">
+                            <i class="fas fa-file-invoice-dollar"></i> Relatórios
+                        </a>
+                    </li>
                 </ul>
                 {% endif %}
                 {% if user.is_authenticated %}
