--- a/alunos/templates/alunos/base.html
+++ b/alunos/templates/alunos/base.html
@@ -7,6 +7,8 @@
     <title>BASE ESCOLA DE LUTAS - {% block title %}{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="icon" type="image/png" href="{% static 'gouveia.png' %}">
+    <link rel="apple-touch-icon" href="{% static 'gouveia.png' %}">
     {% block extra_css %}{% endblock %}
     <style>
         /* --- Paleta de Cores e Estilos Gerais --- */
