Presenças: modelo, form, view e página para marcar presenças; Relatórios: gráfico de evolução com Chart.js e link no menu

--- a/alunos/templates/alunos/base.html
+++ b/alunos/templates/alunos/base.html
@@ -253,6 +253,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'presencas' %}">
+                            <i class="fas fa-user-check"></i> Presenças
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'relatorio-mensal' %}">
                             <i class="fas fa-file-invoice-dollar"></i> Relatórios
                         </a>
