--- a/alunos/templates/registration/login.html
+++ b/alunos/templates/registration/login.html
@@ -28,6 +28,7 @@
                     
                     {# Link para registro (vamos criar em seguida) #}
                     <p class="mt-3 animate__animated animate__fadeInUp animate__delay-1s">Não tem uma conta? <a href="{% url 'signup' %}">Crie uma aqui</a>.</p>
+                    <p class="mt-2"><a href="{% url 'role-select' %}">Voltar</a></p>
 
                 </div>
             </div>
