--- a/alunos/templates/alunos/portal_aluno_signup.html
+++ b/alunos/templates/alunos/portal_aluno_signup.html
@@ -1,24 +1,24 @@
 {% extends 'alunos/base.html' %}
 {% load crispy_forms_tags %}
 
-{% block title %}Portal do Aluno - Login{% endblock %}
+{% block title %}Portal do Aluno - Criar Conta{% endblock %}
 
 {% block content %}
 <div class="container py-5">
   <div class="row justify-content-center">
-    <div class="col-md-5">
+    <div class="col-md-6">
       <div class="card">
         <div class="card-body">
-          <h4 class="mb-3 text-center">Portal do Aluno</h4>
+          <h4 class="mb-3 text-center">Criar conta de Aluno</h4>
           <form method="post">
             {% csrf_token %}
             {{ form|crispy }}
             <div class="d-grid">
-              <button type="submit" class="btn btn-primary">Entrar</button>
+              <button type="submit" class="btn btn-primary">Registrar</button>
             </div>
           </form>
           <div class="text-center mt-3">
-            <a href="{% url 'aluno-signup' %}">Criar conta</a> · <a href="{% url 'role-select' %}">Voltar</a>
+            <a href="{% url 'aluno-login' %}">Já tenho conta</a>
           </div>
         </div>
       </div>
